# wildo

./: .gitignore  Cargo.toml  README.md
config/: config.toml
src/: app.rs  display.rs  main.rs  register.rs  run.rs  stack.rs  traits.rs
src/content/: main_provider.rs  mod.rs  todo.rs  todo_list.rs  traits.rs
src/service/: config.rs  db.rs  editors.rs  insert_mode.rs  log.rs  mod.rs
